add password notice to admin dashboard

--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -19,6 +19,7 @@
         </p>
 
         <h2>Clone the www repo</h2>
+        <p>Authenticate with username "admin" and the password for your Hoodie admin dashboard.</p>
         <pre>
             <code>
                 git clone <span class="gitHost"></span>/www.git
